sharding notebook update

--- a/Sharding/notebook_sharding.ipynb
+++ b/Sharding/notebook_sharding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3f07649d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d96b76ac",
    "metadata": {},
    "outputs": [],
@@ -36,10 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85e2b65b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📋 Listing all pods and their statuses:\n",
+      "\n",
+      " - mongodb-configsvr-0: Running\n",
+      " - mongodb-mongos-6b769fd847-nx27h: Running\n",
+      " - mongodb-mongos-6b769fd847-r2zq7: Running\n",
+      " - mongodb-shard1-0: Running\n",
+      " - mongodb-shard2-0: Running\n",
+      "\n",
+      " Currently there are 2 shards in k8s\n"
+     ]
+    }
+   ],
    "source": [
     "def connect_to_kubernetes():\n",
     "    global K8S_SHARDS\n",
@@ -66,10 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "80b97ee7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected to MongoDB. Databases:\n",
+      "['admin', 'config', 'ycsb_sharded']\n"
+     ]
+    }
+   ],
    "source": [
     "# Replace with your mongos address and authentication if needed\n",
     "mongos_uri = \"mongodb://192.168.178.168:32017\"\n",
@@ -89,10 +114,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f84e389d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 Current shards in the cluster: 2\n",
+      " - shard1: shard1/mongodb-shard1-0.mongodb-shard1.default.svc.cluster.local:27018\n",
+      " - shard2: shard2/mongodb-shard2-0.mongodb-shard2.default.svc.cluster.local:27018\n"
+     ]
+    }
+   ],
    "source": [
     "def list_shards(mongos_client: MongoClient):\n",
     "    global MONGO_SHARDS\n",
@@ -165,7 +200,7 @@
     "        print(f\"❌ Failed to add shard {shard_uri}: {e}\")\n",
     "\n",
     "\n",
-    "def reshard_collection(mongos_client: MongoClient, db_name=\"ycsb_sharded\", coll_name=\"usertable\", chunks=40):\n",
+    "def reshard_collection(mongos_client: MongoClient, db_name=\"ycsb_sharded\", coll_name=\"sharded\", chunks=40):\n",
     "    \"\"\"\n",
     "    Initiates a reshardCollection operation on the given collection with:\n",
     "    - forceRedistribution: true\n",
@@ -182,7 +217,7 @@
     "            namespace = f\"{db_name}.{coll_name}\"\n",
     "            cmd = {\n",
     "                \"reshardCollection\": namespace,\n",
-    "                \"key\": { \"country\": \"hashed\" },\n",
+    "                \"key\": { \"first_name\": \"hashed\" },\n",
     "                \"numInitialChunks\": numInitialChunks,\n",
     "                \"forceRedistribution\": True\n",
     "            }\n",
@@ -200,7 +235,7 @@
     "\n",
     "from bson.int64 import Int64\n",
     "\n",
-    "def split_hashed_chunks(mongos_client: MongoClient, db_name=\"ycsb_sharded\", coll_name=\"usertable\", num_chunks=40):\n",
+    "def split_hashed_chunks(mongos_client: MongoClient, db_name=\"ycsb_sharded\", coll_name=\"sharded\", num_chunks=40):\n",
     "    \"\"\"\n",
     "    Splits a collection sharded on a hashed key into `num_chunks` chunks\n",
     "    using evenly distributed hashed key space split points.\n",
@@ -236,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "3a1e82d5",
    "metadata": {},
    "outputs": [],
@@ -316,10 +351,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "92e3381d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 StatefulSets in namespace 'default':\n",
+      "\n",
+      " - mongodb-configsvr\n",
+      "    🔢 Replicas: 1/1\n",
+      "    🏷️ Selector: {'app': 'mongodb-configsvr'}\n",
+      "\n",
+      " - mongodb-shard1\n",
+      "    🔢 Replicas: 1/1\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard1'}\n",
+      "\n",
+      " - mongodb-shard2\n",
+      "    🔢 Replicas: 1/1\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard2'}\n",
+      "\n",
+      " - mongodb-shard3\n",
+      "    🔢 Replicas: 0/0\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard3'}\n",
+      "\n",
+      " - mongodb-shard4\n",
+      "    🔢 Replicas: 0/0\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard4'}\n",
+      "\n",
+      " - mongodb-shard5\n",
+      "    🔢 Replicas: 0/0\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard5'}\n",
+      "\n",
+      " - mongodb-shard6\n",
+      "    🔢 Replicas: 0/0\n",
+      "    🏷️ Selector: {'app': 'mongodb-shard6'}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print_statefulsets_info(apps_V1)"
    ]
@@ -340,10 +412,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "377af004",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔻 Scaled mongodb-shard4 to 0 replicas.\n"
+     ]
+    }
+   ],
    "source": [
     "scale_k8s_shard_down(apps_V1, 4)"
    ]
@@ -355,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scale_k8s_shard_up(apps_V1, 2)"
+    "scale_k8s_shard_up(apps_V1, 5)"
    ]
   },
   {
@@ -370,10 +450,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "66d64e5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📦 removeShard called on: shard4 (state: completed)\n",
+      "{'$clusterTime': {'clusterTime': Timestamp(1748274550, 17),\n",
+      "                  'signature': {'hash': b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n",
+      "                                        b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n",
+      "                                        b'\\x00\\x00\\x00\\x00',\n",
+      "                                'keyId': 0}},\n",
+      " 'msg': 'removeshard completed successfully',\n",
+      " 'ok': 1.0,\n",
+      " 'operationTime': Timestamp(1748274550, 17),\n",
+      " 'shard': 'shard4',\n",
+      " 'state': 'completed'}\n"
+     ]
+    }
+   ],
    "source": [
     "remove_shard(mongoClient, 4)"
    ]
@@ -400,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "33c882c9",
    "metadata": {},
    "outputs": [],
@@ -419,17 +517,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "48b96a22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of replicas in Kubernetes and MongoDB is the same: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "same_replicas_number()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "afd9c9e3",
    "metadata": {},
    "outputs": [],
@@ -443,7 +559,7 @@
     "        print(f\"Starting scaling down from {MONGO_SHARDS} to {MONGO_SHARDS - 1} replicas...\\n\")\n",
     "        remove_shard(mongoClient, MONGO_SHARDS)\n",
     "        print(\"Resharding the collection...\\n\")\n",
-    "        reshard_collection(mongoClient)\n",
+    "        reshard_collection(mongoClient, coll_name=\"usertable\", chunks=100, shard_key_field=\"first_name\")\n",
     "        remove_shard(mongoClient, MONGO_SHARDS)\n",
     "        scale_k8s_shard_down(apps_V1, K8S_SHARDS)\n",
     "        print(\"✅Scaled down succesfully!\")\n",
@@ -460,7 +576,7 @@
     "        scale_k8s_shard_up(apps_V1, K8S_SHARDS + 1)\n",
     "        add_shard(mongoClient, K8S_SHARDS)\n",
     "        print(\"Resharding the collection...\\n\")\n",
-    "        reshard_collection(mongoClient)\n",
+    "        reshard_collection(mongoClient, coll_name=\"usertable\", chunks=100, shard_key_field=\"first_name\")\n",
     "        print(\"✅Scaled up succesfully!\")\n",
     "        same_replicas_number()\n",
     "        return True\n",
@@ -479,10 +595,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "18b5117d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting scaling up from 3 to 4 replicas...\n",
+      "\n",
+      "🔺 Scaled mongodb-shard4 to 1 replica.\n",
+      "✅ Shard added: shard4/mongodb-shard4-0.mongodb-shard4.default.svc.cluster.local:27018\n",
+      "{'$clusterTime': {'clusterTime': Timestamp(1748274590, 18),\n",
+      "                  'signature': {'hash': b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n",
+      "                                        b'\\x00\\x00\\x00\\x00\\x00\\x00\\x00\\x00'\n",
+      "                                        b'\\x00\\x00\\x00\\x00',\n",
+      "                                'keyId': 0}},\n",
+      " 'ok': 1.0,\n",
+      " 'operationTime': Timestamp(1748274590, 18),\n",
+      " 'shardAdded': 'shard4'}\n",
+      "Resharding the collection...\n",
+      "\n",
+      "Resharding initiated for ycsb_sharded.usertable with 100 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 99 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 98 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 97 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 96 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 95 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 94 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 93 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 92 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 91 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 90 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 89 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 88 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 87 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 86 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 85 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 84 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 83 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 82 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 81 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 80 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 79 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 78 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 77 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 76 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 75 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 74 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 73 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 72 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 71 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 70 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 69 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 68 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 67 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 66 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 65 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 64 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 63 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 62 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 61 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 60 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 59 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 58 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 57 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 56 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 55 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 54 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 53 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 52 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 51 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 50 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 49 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 48 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 47 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 46 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 45 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 44 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 43 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 42 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 41 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 40 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 39 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 38 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 37 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 36 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 35 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 34 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 33 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 32 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 31 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 30 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 29 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 28 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 27 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 26 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 25 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 24 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 23 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 22 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 21 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 20 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 19 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 18 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 17 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 16 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 15 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 14 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 13 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 12 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 11 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 10 chunks...✅\n",
+      "Resharding initiated for ycsb_sharded.usertable with 9 chunks...✅\n",
+      "✅Scaled up succesfully!\n",
+      "The number of replicas in Kubernetes and MongoDB is the same: 4\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scale_cluster_up(mongoClient, apps_V1)"
    ]
@@ -490,7 +731,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
